--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="js csstransforms3d">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=http://localhost:1313/docs/basics/what-is-this-hugo-theme/"/>
+    <meta http-equiv="refresh" content="0; url=https://tracker.learn.cisco/docs/basics/what-is-this-hugo-theme/"/>
     
 </style>
   </head>
